--- a/Dockerfile-ecds
+++ b/Dockerfile-ecds
@@ -2,10 +2,9 @@
 FROM ruby:3.2.2
 
 RUN ls /etc
-RUN apt update -qq && apt install -y postgresql-client git libvips curl cron vim
+RUN apt update -qq && apt install -y postgresql-client git libvips curl cron vim geos
 RUN curl -fsSL https://deb.nodesource.com/setup_20.x | bash - && apt install nodejs
 RUN npm install --global yarn
-RUN mkdir -p /data/typesense
 
 WORKDIR /app
 
@@ -15,7 +14,8 @@ ARG DATABASE_PORT
 ARG DATABASE_USERNAME
 ARG DATABASE_PASSWORD
 ARG HOSTNAME
-ARG TYPESENSE_API_KEY
+ARG ELASTICSEARCH_HOST
+ARG ELASTICSEARCH_API_KEY
 ARG RAILS_ENV
 ARG REACT_APP_IIIF_MANIFEST_ITEM_LIMIT
 ARG REACT_APP_MAP_TILER_KEY
@@ -25,7 +25,6 @@ ARG IIIF_CLOUD_API_KEY
 ARG IIIF_CLOUD_URL
 ARG SECRET_KEY_BASE
 ARG AUTHENTICATION_EXPIRATION
-ARG TYPESENSE_SEARCH_KEY
 
 # Add Rails gems
 COPY Gemfile Gemfile
@@ -33,12 +32,7 @@ COPY Gemfile.lock Gemfile.lock
 
 RUN bundle install
 
-RUN curl -O https://dl.typesense.org/releases/26.0/typesense-server-26.0-linux-amd64.tar.gz && \
-  tar -xzf typesense-server-26.0-linux-amd64.tar.gz
-
 COPY . .
-
-RUN sed -i -e 's|api-key.*|'"api-key = $TYPESENSE_API_KEY"'|g' ./typesense-server.ini
 
 ENV AUTHENTICATION_EXPIRATION=$AUTHENTICATION_EXPIRATION
 ENV GENERATE_SOURCEMAP=false
@@ -60,8 +54,8 @@ ENV REACT_APP_IIIF_MANIFEST_ITEM_LIMIT=$REACT_APP_IIIF_MANIFEST_ITEM_LIMIT
 ENV REACT_APP_IIIF_MANIFEST_ITEM_LIMIT=$REACT_APP_IIIF_MANIFEST_ITEM_LIMIT
 ENV REACT_APP_MAP_TILER_KEY=$REACT_APP_MAP_TILER_KEY
 ENV SECRET_KEY_BASE=$SECRET_KEY_BASE
-ENV TYPESENSE_API_KEY=$TYPESENSE_API_KEY
-ENV TYPESENSE_SEARCH_KEY=$TYPESENSE_SEARCH_KEY
+ENV ELASTICSEARCH_API_KEY=$ELASTICSEARCH_API_KEY
+ENV ELASTICSEARCH_HOST=$ELASTICSEARCH_HOST
 
 # Build and deploy React front-end
 RUN yarn config set network-timeout 600000 -g
