Add elasticsearch env vars to build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,8 +43,8 @@ jobs:
           REACT_APP_IIIF_MANIFEST_ITEM_LIMIT: ${{ secrets.REACT_APP_IIIF_MANIFEST_ITEM_LIMIT }}
           REACT_APP_MAP_TILER_KEY: ${{ secrets.REACT_APP_MAP_TILER_KEY }}
           SECRET_KEY_BASE: ${{ secrets.SECRET_KEY_BASE }}
-          TYPESENSE_API_KEY: ${{ secrets.TYPESENSE_API_KEY }}
-          TYPESENSE_SEARCH_KEY: ${{ secrets.TYPESENSE_SEARCH_KEY }}
+          ELASTICSEARCH_HOST: ${{ secrets.TYPESENSE_API_KEY }}
+          ELASTICSEARCH_API_KEY: ${{ secrets.ELASTICSEARCH_API_KEY }}
 
         run: |
           chmod +x build.sh
